# imgui_template

./: CMakeLists.txt  README.md  hello_world.cpp
examples/: CMakeLists.txt  Resource.rc.in  basic-interaction-example.cpp  hello_globe.cpp  hello_imgui_demo.cpp  hello_imgui_demodocking.cpp  simple-example.cpp  widgets-example.cpp
